--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3"
 byteorder = "1.4"
 crc = "1.8"
-serde = "*"
-serde_derive = "*"
+serde = "1"
+serde_derive = "1"
 
 [lib]
 name = "libactionkv"
@@ -19,3 +20,7 @@ path = "src/lib.rs"
 [[bin]]
 name = "akv_mem"
 path = "src/akv_mem.rs"
+
+[[bin]]
+name = "akv_disk"
+path = "src/akv_disk.rs"
